vpnserver-cf.template
{
    "Description": "Effective DevOps in AWS: SoftEtherVPN Server",
    "Outputs": {
        "VPNAddress": {
            "Description": "VPN address",
            "Value": {
                "Fn::GetAtt": [
                    "server",
                    "PublicIp"
                ]
            }
        },
        "VPNAdminPassword": {
            "Description": "Password to connect administration mode",
            "Value": {
                "Ref": "server"
            }
        },
        "VPNL2TP": {
            "Description": "L2TPpreshared key for authentication",
            "Value": {
                "Ref": "server"
            }
        },
        "VPNPassword": {
            "Description": "VPN password",
            "Value": {
                "Ref": "server"
            }
        },
        "VPNUser": {
            "Description": "VPN username",
            "Value": "vpn"
        }
    },
    "Parameters": {
        "KeyPair": {
            "ConstraintDescription": "must be the name of an existing EC2KeyPair.",
            "Description": "Name of an existing EC2KeyPair to SSH",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "PublicSubnet": {
            "ConstraintDescription": "PublicSubnet",
            "Description": "PublicSubnet",
            "Type": "List<AWS::EC2::Subnet::Id>"
        },
        "VpcId": {
            "Description": "VPC",
            "Type": "AWS::EC2::VPC::Id"
        }
    },
    "Resources": {
        "VPNSecurityGroup": {
            "Properties": {
                "GroupDescription": "SoftEther security group",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "4500",
                        "IpProtocol": "udp",
                        "ToPort": "4500"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "500",
                        "IpProtocol": "udp",
                        "ToPort": "500"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    }
                ],
                "VpcId": {
                    "Ref": "VpcId"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "server": {
            "Properties": {
                "ImageId": "ami-c03435a3",
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyPair"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "GroupSet": [
                            {
                                "Ref": "VPNSecurityGroup"
                            }
                        ],
                        "SubnetId": {
                            "Fn::Select": [
                                "0",
                                {
                                    "Ref": "PublicSubnet"
                                }
                            ]
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        }
    }
}
